########################
# Current Developments #
########################

Work toward next release.  Currently under development.

ADDED:

* Added a cache of question point values, to avoid having to fake a page load
  to get question point values in tutor.compute_page_stats.

CHANGED:

* CAT-SOOP can optionally be configured to use uWSGI, and the options for
  configuring the WSGI server have changed.

* Logs are now stored in plain-text files, as opposed to binary log file.

* Page views are no longer logged in the problemactions log.

* Updated KaTeX to 0.9.0-beta1.

DEPRECATED:

REMOVED:

FIXED:

* Fixed a bug with rendering of scores when manual grades are submitted.

SECURITY:

DOCUMENTATION:


##################
# Version 11.1.2 #
##################

ADDED:

* Added "Log In" / "Log Out" to top menu by default, and gave authentication
  types the ability to populate that menu.

CHANGED:

* Separated WSGI server into separate process, and allow cs_wsgi_server_port to
  be a list to start multiple servers (for load balancing).

* Updated wsgi.py so that it can be used by an external WSGI server (such as
  uWSGI).

* csq_nosubmit_message is now sent only on an actual submission (not when
  viewing the page), so that the submit button still appears when loading pages
  with cs_nosubmit_message set.

* Buttons are now always created under 'view' mode in the default handler.

* cs_nosubmit_message was replaced with csq_nosubmit_message (specific to
  each question).

FIXED:

* Fixed an issue where checker results were stored in an invalid location in
  the case of some errors.

* Fixed an issue with the checker updating scores for problems that don't yet
  have a problemstate log.

* Added CSS to prevent scrollbars from appearing on the CAT-SOOP logo in page
  footers.

* Fixed key generation for AES encryption in login authentication mode.

* Fixed a bug with changing password in login authentication mode.
